add block elements

--- a/my-favorite-animal.html
+++ b/my-favorite-animal.html
@@ -15,6 +15,7 @@
     <li>pupa (chrysalis)</li>
     <li>adult</li>
 </ul>
+<p>Butterflies attach their eggs to leaves with a special glue. Butterflies often have brightly coloured wings with unique patterns made up of tiny scales.</p>
 
 </body>
 </html>
